@@ -1,5 +1,10 @@
 2004-10-06  Derek Price  <derek@ximbiot.com>
 
+	* mkconfig.pl: Check definition is defined, not false, before deciding
+	not to print it.
+
+2004-10-06  Derek Price  <derek@ximbiot.com>
+
 	Use getpass proto from getpass.h.
 	* config.h.in.in: Undo last defn.
 	* unistd.h (getpass): Remove proto.
